syntax = "proto3";

package download;

message DownloadRequest {
  string name = 1;
}

message DownloadResponse {
  bytes data = 1;
}

service DownloadService {
  rpc Download (DownloadRequest) returns (stream DownloadResponse);
}